force-app/main/default/objects/Event_Form__c/fields/Confirmation_Title__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Title__c</fullName>
    <label>Confirmation Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>