force-app/main/default/objects/Event_Form__c/fields/Data_Protection__c.field-meta.xml
<CustomField>
    <fullName>Data_Protection__c</fullName>
    <label>Data Protection</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>