force-app/main/default/objects/Event_Form__c/fields/Email_Welcome__c.field-meta.xml
<CustomField>
    <fullName>Email_Welcome__c</fullName>
    <label>Email Welcome</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>