force-app/main/default/objects/Event_Form__c/fields/Embed_Code__c.field-meta.xml
<CustomField>
    <fullName>Embed_Code__c</fullName>
    <formula>HYPERLINK(&quot;#&quot;, &quot;&lt;iframe src=&apos;http://raisengo.force.com/&quot;+&quot;Event?id=&quot;+Id+&quot;&apos; width=&apos;400&apos; height=&apos;800&apos; frameborder=&apos;0&apos; /&gt;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Embed Code</label>
    <type>Text</type>
</CustomField>