force-app/main/default/objects/Event_Form__c/fields/Event_Certification_Description__c.field-meta.xml
<CustomField>
    <fullName>Event_Certification_Description__c</fullName>
    <label>Event Certification Description</label>
    <type>TextArea</type>
</CustomField>