force-app/main/default/objects/Event_Form__c/fields/Event_Certification_Header__c.field-meta.xml
<CustomField>
    <fullName>Event_Certification_Header__c</fullName>
    <label>Event Certification Header</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>