force-app/main/default/objects/Event_Form__c/fields/Event_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Event_Contacts__c</fullName>
    <label>Event Contacts</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>