force-app/main/default/objects/Event_Form__c/fields/Event_Description__c.field-meta.xml
<CustomField>
    <fullName>Event_Description__c</fullName>
    <label>Event Description</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>