force-app/main/default/objects/Event_Form__c/fields/Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page__c</fullName>
    <label>Landing Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>