force-app/main/default/objects/Event_Form__c/fields/z_calendar_end__c.field-meta.xml
<CustomField>
    <fullName>z_calendar_end__c</fullName>
    <formula>TEXT( YEAR( DATEVALUE(End__c) ) ) &amp; &quot;-&quot; &amp; LPAD(TEXT(MONTH(DATEVALUE(End__c))), 2, &apos;0&apos;) &amp; &quot;-&quot; &amp; LPAD(TEXT(DAY(DATEVALUE(End__c))), 2, &apos;0&apos;) &amp; &quot; &quot; &amp; Mid(Text(End__c), 12,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>z_calendar_end</label>
    <type>Text</type>
</CustomField>