force-app/main/default/objects/Event_Form__c/fields/z_calendar_start__c.field-meta.xml
<CustomField>
    <fullName>z_calendar_start__c</fullName>
    <formula>TEXT( YEAR( DATEVALUE(Start__c) ) ) &amp; &quot;-&quot; &amp; LPAD(TEXT(MONTH(DATEVALUE(Start__c))), 2, &apos;0&apos;) &amp; &quot;-&quot; &amp; LPAD(TEXT(DAY(DATEVALUE(Start__c))), 2, &apos;0&apos;) &amp; &quot; &quot; &amp; Mid(Text(Start__c), 12,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>z_calendar_start</label>
    <type>Text</type>
</CustomField>