force-app/main/default/objects/Event_Form__c/recordTypes/Event.recordType-meta.xml
<RecordType>
    <fullName>Event</fullName>
    <active>true</active>
    <description>Event form type.</description>
    <label>Event</label>
</RecordType>