force-app/main/default/objects/Event_Form__c/recordTypes/Resource.recordType-meta.xml
<RecordType>
    <fullName>Resource</fullName>
    <active>true</active>
    <description>Resource form type.</description>
    <label>Resource</label>
</RecordType>